<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Switch
        android:id="@+id/musicSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_music"
        android:thumbTint="@color/switch_thumb"
        android:trackTint="@color/switch_track"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/sfxSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_effects"
        android:thumbTint="@color/switch_thumb"
        android:trackTint="@color/switch_track"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/playerNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:text="@string/player"
        tools:ignore="LabelFor,TextFields" />

</LinearLayout>